Exibição dos produtos de uma venda.

--- a/APS/APS/APS.csproj
+++ b/APS/APS/APS.csproj
@@ -349,6 +349,7 @@
     <Content Include="Views\Home\Contact.cshtml" />
     <Content Include="Views\Home\Index.cshtml" />
     <Content Include="Views\Login\Index.cshtml" />
+    <Content Include="Views\Home\Detalhes.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
