Finalização do projeto, porém não está gravado o produto e categoria por falha no serviço

--- a/APS/APS/APS.csproj
+++ b/APS/APS/APS.csproj
@@ -161,6 +161,7 @@
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
     <Compile Include="Models\Pedido.cs" />
+    <Compile Include="Models\PedidoRecebido.cs" />
     <Compile Include="Models\RequestPutTipoProduto.cs" />
     <Compile Include="Models\tipoProduto.cs" />
     <Compile Include="Models\Usuario.cs" />
@@ -355,6 +356,7 @@
     <Content Include="Views\Login\Index.cshtml" />
     <Content Include="Views\Home\Detalhes.cshtml" />
     <Content Include="Views\Produto\CadastroCategoria.cshtml" />
+    <Content Include="Views\Produto\CadastroProduto.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
